Styled body, header, logo, and main navs

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     </head>
     <body>
 
-        <div>
+        <div id="wholeShebang">
             <header id="site_header">
 
-                <a id="logo"><img src="img/logo.png" alt="Puppy Logo"></a>
+                <div id="logo"><img src="img/logo.png" alt="Puppy Logo"></div>
 
                 <nav class="main_navigation">
-                    <a href="#">Puppies</a>
-                    <a href="#">Dog Breeds</a>
-                    <a href="#">So Cute</a>
+                    <a href="#" class="mnl">Puppies</a>
+                    <a href="#" class="mnl">Dog Breeds</a>
+                    <a href="#" class="mnl">So Cute</a>
                 </nav>
             </header>
 
