Styled page content, h2 and h3s, linky and section tags/ids/classes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <section>
                     <h2>Puppies are pretty much the best...</h2>
 
-                    <p>Humans have had a strong affinity for dogs of all sorts for <a href="#">tens of thousands of years</a>. We have an undeniable and unique social connection to them. <strong>Our love of puppies</strong> is a direct extension of that affinity.</p>
+                    <p>Humans have had a strong affinity for dogs of all sorts for <a id="linky" href="#">tens of thousands of years</a>. We have an undeniable and unique social connection to them. <strong>Our love of puppies</strong> is a direct extension of that affinity.</p>
 
                     <h3>So, why do we love puppies?</h3>
 
