Styled table, td, thead, and img

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                     <table>
                         <thead>
                             <tr>
-                                <td>Breed</td>
-                                <td>Image</td>
-                                <td>Weight</td>
-                                <td>Origin</td>
-                                <td>Markings</td>
+                                <th>Breed</th>
+                                <th>Image</th>
+                                <th>Weight</th>
+                                <th>Origin</th>
+                                <th>Markings</th>
                             </tr>
                         </thead>
                         <tbody>
